--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "sandbox": {
+    "ai_calorie_tracker": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -14,7 +14,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": {
-              "base": "dist/sandbox"
+              "base": "dist/ai-calorie-tracker"
             },
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -29,7 +29,8 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "baseHref": "ai_calorie_tracker_ui"
           },
           "configurations": {
             "production": {
@@ -60,10 +61,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "sandbox:build:production"
+              "buildTarget": "ai_calorie_tracker:build:production"
             },
             "development": {
-              "buildTarget": "sandbox:build:development"
+              "buildTarget": "ai_calorie_tracker:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -71,7 +72,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "sandbox:build"
+            "browserTarget": "ai_calorie_tracker:build"
           }
         },
         "test": {
