--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --disable-host-check",
-    "build": "ng build",
+    "build": "ng build --configuration production --base-href /ai_calorie_tracker_ui/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
